--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         esriConfig.apiKey = "AAPKb2ab4249fa8b48218ea1d3f993d86e30GG1q0cy5ivCIPXKbo-wo-fj3tO-ZFJp0hq7tTriKC-DUaM8vud4GclOQGtSoAq7D";
 
         const map = new ArcGISMap({
-            basemap: "topo"
+            basemap: "arcgis-nova"
         });
 
         const view = new MapView({
