--- a/game/index.html
+++ b/game/index.html
@@ -386,11 +386,13 @@
                         graphicsLayer.add(pointGraphic);
 
                         const fullExtent = [response, pointGraphic];
-                        view.goTo(fullExtent).then(function () {
-                            if (!view.extent.contains(fullExtent))
-                                view.zoom -= 1;
-                        });
-                        auth0.getUser().then(user => {
+                        view.goTo(fullExtent)
+                        // .then(function () {
+                        //     // if (!view.extent.contains(fullExtent))
+                        //     //     view.zoom -= 1;
+                        // });
+
+                        auth0 && auth0.getUser().then(user => {
                           console.log("User=", user)
                         })
 
@@ -525,8 +527,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
-    <script src="public/js/ui.js"></script>
-    <script src="public/js/app.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://js.arcgis.com/4.18/"></script>
   </body>
 </html>
