Cambio de título, planteamiento concurso

--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoNight</title>
+    <title>GeoNight, la noche de la geografía</title>
 </head>
+
 <body>
     <ul>
+        <!-- No se como harías los vínculos en las listas, con <a> o como??-->
         <li>Concurso</li>
         <li>Juegos</li>
-        <li>...</li>
+        <li>Sobre la GeoNigth</li>
+        <li>Otros recursos</li>
     </ul>
-    <h1>GeoNight...</h1>
+    <h1>GeoNight, la noche de la geografía</h1>
     <p>
         Diviértete...
     </p>
     <button>Concurso</button>
+    <button>Otros juegos</button>
 
     <h2>Concurso: Terra Incógnita</h2>
-    ...
+    <p>Explicación del funcionamiento y objetivos del concurso</p>
+    <a href=""><img src="" alt=""></a>
+    <!--Aquí pondría la imagen y el link de vínculo con el concurso-->
+
 
     <h2>Otros juegos</h2>
 
@@ -37,4 +45,5 @@
 
     <h2>Sobre la GeoNight</h2>
 </body>
+
 </html>
