--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoNight, la noche de la geografía</title>
+    <!-- COMMON TAGS -->
+<meta charset="utf-8">
+<title>GeoNight, la noche de la geaografía</title>
+<!-- Search Engine -->
+<meta name="description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+<meta name="image" content="imagen para el sitio">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="GeoNight, la noche de la geaografía">
+<meta itemprop="description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+<meta itemprop="image" content="imagen para el sitio">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary with large image">
+<meta name="twitter:title" content="GeoNight, la noche de la geaografía">
+<meta name="twitter:description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="GeoNight, la noche de la geaografía">
+<meta name="og:description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+<meta name="og:image" content="Aquí la imagen que quieras que acompañe a la url al compartirla">
+<meta name="og:url" content="url del sitio que se está compartiendo">
+<meta name="og:site_name" content="Geonight">
+<meta name="og:type" content="website">
 </head>
 
 <body>
