--- a/index.html
+++ b/index.html
@@ -7,64 +7,289 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoNight, la noche de la geografía</title>
     <!-- COMMON TAGS -->
-<meta charset="utf-8">
-<title>GeoNight, la noche de la geaografía</title>
-<!-- Search Engine -->
-<meta name="description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
-<meta name="image" content="imagen para el sitio">
-<!-- Schema.org for Google -->
-<meta itemprop="name" content="GeoNight, la noche de la geaografía">
-<meta itemprop="description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
-<meta itemprop="image" content="imagen para el sitio">
-<!-- Twitter -->
-<meta name="twitter:card" content="summary with large image">
-<meta name="twitter:title" content="GeoNight, la noche de la geaografía">
-<meta name="twitter:description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
-<!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="GeoNight, la noche de la geaografía">
-<meta name="og:description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
-<meta name="og:image" content="Aquí la imagen que quieras que acompañe a la url al compartirla">
-<meta name="og:url" content="url del sitio que se está compartiendo">
-<meta name="og:site_name" content="Geonight">
-<meta name="og:type" content="website">
+    <meta charset="utf-8">
+    <title>GeoNight, la noche de la geaografía</title>
+    <!-- Search Engine -->
+    <meta name="description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+    <meta name="image" content="imagen para el sitio">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="GeoNight, la noche de la geaografía">
+    <meta itemprop="description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+    <meta itemprop="image" content="imagen para el sitio">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary with large image">
+    <meta name="twitter:title" content="GeoNight, la noche de la geaografía">
+    <meta name="twitter:description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="GeoNight, la noche de la geaografía">
+    <meta name="og:description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+    <meta name="og:image" content="Aquí la imagen que quieras que acompañe a la url al compartirla">
+    <meta name="og:url" content="url del sitio que se está compartiendo">
+    <meta name="og:site_name" content="Geonight">
+    <meta name="og:type" content="website">
+
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="assets/css/styles.css" rel="stylesheet" />
 </head>
 
-<body>
-    <ul>
-        <!-- No se como harías los vínculos en las listas, con <a> o como??-->
-        <li>Concurso</li>
-        <li>Juegos</li>
-        <li>Sobre la GeoNigth</li>
-        <li>Otros recursos</li>
-    </ul>
-    <h1>GeoNight, la noche de la geografía</h1>
-    <p>
-        Diviértete...
-    </p>
-    <button>Concurso</button>
-    <button>Otros juegos</button>
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top bg-port-gore" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">GeoNight</a>
+            <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#concurso">Concurso</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#juegos">Juegos</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#sobre-la-geonight">Sobre la GeoNigth</a></li>
+                    <!-- <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Otros recursos</a></li> -->
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <h2>Concurso: Terra Incógnita</h2>
-    <p>Explicación del funcionamiento y objetivos del concurso</p>
-    <a href=""><img src="" alt=""></a>
-    <!--Aquí pondría la imagen y el link de vínculo con el concurso-->
+    <!-- Masthead-->
+    <header class="masthead bg-primary text-white text-center" id="hero">
+        <div class="container d-flex align-items-center flex-column">
+            <!-- Masthead Avatar Image-->
+            <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="" />
+            <!-- Masthead Heading-->
+            <h1 class="masthead-heading text-uppercase mb-0">La noche de la geografía</h1>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <!-- Masthead Subheading-->
+            <p class="masthead-subheading font-weight-light mb-0">Pasa una noche divertida jugando con la geografía</p>
+            <button>Concurso</button>
+            <button>Otros juegos</button>
+        </div>
+    </header>
 
 
-    <h2>Otros juegos</h2>
+    <section class="page-section" id="concurso">
+        <div class="container">
+            <h2>Concurso: Terra Incógnita</h2>
+            <p>Explicación del funcionamiento y objetivos del concurso</p>
+            <a href=""><img src="" alt=""></a>
+            <!--Aquí pondría la imagen y el link de vínculo con el concurso-->
+        </div>
+    </section>
 
-    <form>
+
+
+    <section class="page-section bg-port-gore" id="juegos">
+        <div class="container">
+            <!-- Portfolio Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase mb-0">Otros juegos</h2>
+            <!-- Icon Divider-->
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <!-- Portfolio Grid Items-->
+
+
+            <ul id="games"></ul>
+        </div>
+    </section>
+    <!-- <form>
         <label for="level">Nivel</label>
         <select name="level" id="level">
             <option value="primaria">Primaria</option>
             ...
         </select>
-    </form>
+    </form> -->
+
 
     <!--
         El listado de juegos lo generaremos dinámicamente con JS
     -->
 
-    <h2>Sobre la GeoNight</h2>
-</body>
 
+    <section class="page-section" id="sobre-la-geonight">
+        <div class="container">
+            <h2>Sobre la GeoNight</h2>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <!--Aquí pondría la imagen y el link de vínculo con el concurso-->
+        </div>
+    </section>
+
+    <!-- Footer-->
+    <footer class="footer text-center bg-port-gore">
+        <div class="container">
+            <div class="row">
+                <!-- Footer Location-->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-4">Location</h4>
+                    <p class="lead mb-0">
+                        2215 John Daniel Drive
+                        <br />
+                        Clark, MO 65243
+                    </p>
+                </div>
+                <!-- Footer Social Icons-->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-4">Around the Web</h4>
+                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                </div>
+                <!-- Footer About Text-->
+                <div class="col-lg-4">
+                    <h4 class="text-uppercase mb-4">About Freelancer</h4>
+                    <p class="lead mb-0">
+                        Freelance is a free to use, MIT licensed Bootstrap theme created by
+                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                        .
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Copyright Section-->
+    <div class="copyright py-4 text-center text-white">
+        <div class="container"><small>Copyright © Your Website 2020</small></div>
+    </div>
+    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
+    <div class="scroll-to-top d-lg-none position-fixed">
+        <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="assets/js/scripts.js"></script>
+
+    <script>
+        const games = [
+            {
+                title: 'Más de 500 mapas para jugar',
+                description: 'Aprende jugando con mapas físicos, polícos, de gentilicios, ambientales, históricos, ...',
+                url: 'https://mapasinteractivos.didactalia.net/comunidad/mapasflashinteractivos/MapasDidactalia?',
+                author: 'Didactalia',
+                language: 'Español',
+                type: 'Web'
+            },
+            {
+                title: 'APPangea',
+                descripcion: 'Aprende Geografía e Historia desde tu móvil o table respondiento a preguntas y compitiendo más personas',
+                url: 'https://appangea.com/',
+                author: 'Desconocido / Docentes',
+                language: 'Español',
+                type: 'Móvil (Android & iOS)'
+            },
+            {
+                title: 'Nombra ese monumento',
+                descripcion: 'Rasca rápido e intenta averiguar el nombre del monumento',
+                url: 'https://hhkaos.github.io/name-that-landmark/',
+                author: 'Esri',
+                language: 'Español',
+                type: 'Web'
+            },
+            {
+                title: 'GeoSapiens Web',
+                descripcion: '',
+                url: 'https://educativo.ign.es/geosapiens/htm/en/index.html',
+                author: '',
+                language: '',
+                type: ''
+            },
+            {
+                title: 'GeoSapiens App',
+                descripcion: 'Pon a prueba tus conocimientos sobre geografía, física, política y paisaje',
+                url: 'https://www.ign.es/web/dir-aplicaciones-moviles',
+                author: 'Instituto Geográfico Nacional',
+                language: 'Español',
+                type: 'Móvil (Android & iOS)'
+            },
+            {
+                title: 'La leyenda de las joyas perdidas',
+                descripcion: 'Escape Room Virtual de dificultad media y duración aproximada de 90minutos',
+                url: 'http://educativo.ign.es/escape-room/',
+                author: 'Instituto Geográfico Nacional',
+                language: 'Español',
+                type: 'Web'
+            },
+            {
+                title: 'Juegos de geografía',
+                descripcion: 'Seis juegos para practicar los términos geográficos imprescindibles para la EBAU/EVAU',
+                url: 'https://www.ign.es/web/ign/portal/recursos-educativos/juegos',
+                author: 'Instituto Geográfico Nacional',
+                language: 'Español',
+                type: 'Web'
+            },
+            {
+                title: 'Cartografía antigua',
+                descripcion: 'Once puzles hechos con maás antiguos de entre 60 y 70 piezas',
+                url: 'https://www.jigsawplanet.com/cartotecaign/mapas-antiguos',
+                author: 'Instituto Geográfico Nacional',
+                language: 'Español',
+                type: 'Web'
+            },
+            {
+                title: 'Rompecabezas',
+                descripcion: 'Configura el puzzle a tu medida; elige ubización, tamaño, dificultad, ...',
+                url: 'https://maps.esri.com/rc/puzzle2/index.html',
+                author: 'Esri',
+                language: 'Inglés',
+                type: 'Web'
+            },
+            {
+                title: 'Un juego de geodésicas',
+                descripcion: 'Encuentra la ubicación que sea equidistante a tres ciudades seleccionadas al azar',
+                url: 'https://maps.esri.com/jg/GeodesicsGame/index.html',
+                author: 'Esri',
+                language: 'Inglés',
+                type: 'Web'
+            },
+            {
+                title: '¿Conoces Europa?',
+                descripcion: 'Arrastra los países a su posición correcta en el mapa',
+                url: 'http://thinkmaps.github.io/Puzzle/index_en.html',
+                author: 'Esri',
+                language: 'Inglés',
+                type: 'Web'
+            }
+        ];
+
+        games.forEach(elem => {
+            const template = Handlebars.compile(`
+                <li>{{title}}</li>
+            `);
+            const gamesEl = document.getElementById('games');
+            const str = template({ title: elem.title });
+            gamesEl.insertAdjacentHTML( 'beforeend', str);
+
+        })
+    </script>
+</body>
 </html>
