Adding more content

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#concurso">Concurso</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#juegos">Juegos</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#sobre-la-geonight">Sobre la GeoNigth</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#juegos">Otros juegos</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#sobre-la-geonight">Sobre esta iniciativa</a></li>
                     <!-- <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Otros recursos</a></li> -->
                 </ul>
             </div>
@@ -63,7 +63,8 @@
             <!-- Masthead Avatar Image-->
             <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="" />
             <!-- Masthead Heading-->
-            <h1 class="masthead-heading text-uppercase mb-0">La noche de la geografía</h1>
+            <h1 class="masthead-heading text-uppercase mb1">La noche de la geografía</h1>
+            <h2>9 Abril 2021</h2>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
@@ -71,18 +72,54 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">Pasa una noche divertida jugando con la geografía</p>
-            <button>Concurso</button>
-            <button>Otros juegos</button>
+            <p class="masthead-subheading font-weight-light mb-0">
+                <em>"Los niños y niñas no juegan para aprender, aprenden porque juegan"</em>, Jean Piaget
+            </p>
+            <!-- <a href="#concurso" class="btn btn-secondary">Concurso</a>
+            <a href="juegos" class="btn btn-secondary">Otros juegos</a> -->
         </div>
     </header>
 
 
     <section class="page-section" id="concurso">
         <div class="container">
-            <h2>Concurso: Terra Incógnita</h2>
-            <p>Explicación del funcionamiento y objetivos del concurso</p>
-            <a href=""><img src="" alt=""></a>
+            <div class="row mb1">
+                <div class="col-md-12">
+                    <h2>Concurso Terra Incógnita (1ª Edición)</h2>
+                </div>
+            </div>
+            <div class="row mb1">
+                <div class="col-md-8">
+                    <p>
+                        Entre los días <strong>8 y 9 de Abril</strong> de 2021 se
+                        organizarán sesiones de juego grupales (de hasta 8 personas)
+                        de <strong>una hora de duración entre las 17 y las 22 (CET)
+                        </strong>.
+                    </p>
+                    <p>
+                        De forma colectiva cada grupo tendrá que desvelar la identidad
+                        y localización de una serie de lugares ubicacods en distintos
+                        puntos del mundo. Se darán pistas de contenido geográfico (
+                        características del medio físicos y del medio humano,
+                        potencialidades, riesgos, problemas ambientales, etc)
+                    </p>
+                    <p>
+                        Los grupos ganadores reciban un conjunto de obsequios vinculados
+                        a la Geografía como premio.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img src="https://picsum.photos/480/270">
+                </div>
+            </div>
+            <p>
+                <a href="https://docs.google.com/spreadsheets/d/133QV_QVrhE5lCBv8H13miwkHr5R5sPxCXyy_C4TaOAI/edit#gid=0" class="btn btn-primary btn-lg mr1">
+                    Inscríbete gratuítamente
+                </a>
+                <a href="#" class="btn btn-secondary btn-lg" data-toggle="modal" data-target="#contestBasis">
+                    Bases del concurso
+                </a>
+            </p>
             <!--Aquí pondría la imagen y el link de vínculo con el concurso-->
         </div>
     </section>
@@ -121,20 +158,35 @@
 
     <section class="page-section" id="sobre-la-geonight">
         <div class="container">
-            <h2>Sobre la GeoNight</h2>
+            <h2>Sobre esta iniciativa</h2>
+            <p>
+                La "Noche de la Geografía" (<a href="https://www.geonight.net/">
+                geonight.net</a>) es una iniciativa internacional en la que una
+                tarde o noche al año <a href="https://www.geonight.net/geonight-2021-events-map/">
+                se organizan eventos simultáneamente en todo el mundo</a> para
+                poner en relieve la geografía y a l@s profesionales de este campo.
+            </p>
+            <p>
+                Con ella se pretende dar al gran público la oportunidad de
+                familiarizarse con los conceptos y estudios geográficos y hacer
+                más accesible la investigación geográfica.
+            </p>
+            <p>
+                Concretamente esta página que estás visitando es una iniciativa
+                puesta en marcha por la <a href="https://www.age-geografia.es/site/juega-con-la-age-en-la-noche-de-la-geografia/">
+                Asociación Española de Geografía</a> en colaboración con otras
+                entidades nacionales para difundir de una manera lúdica los
+                contenidos de la Geografía, así como fomentar la conexión entre
+                el colectivo de geógrafos/as y aficionados/as a la Geografía de
+                distintas partes del mundo.
+            </p>
+
+
+            <h3>Organizan</h3>
             <p>&nbsp;</p>
+
+            <h3>Colaboran</h3>
             <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <!--Aquí pondría la imagen y el link de vínculo con el concurso-->
         </div>
     </section>
 
@@ -142,39 +194,67 @@
     <footer class="footer text-center bg-port-gore">
         <div class="container">
             <div class="row">
-                <!-- Footer Location-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Location</h4>
-                    <p class="lead mb-0">
-                        2215 John Daniel Drive
-                        <br />
-                        Clark, MO 65243
-                    </p>
-                </div>
-                <!-- Footer Social Icons-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Around the Web</h4>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
-                </div>
-                <!-- Footer About Text-->
-                <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-4">About Freelancer</h4>
-                    <p class="lead mb-0">
-                        Freelance is a free to use, MIT licensed Bootstrap theme created by
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                        .
-                    </p>
+                <div class="col-md-12">
+                    <small>Página creada con ❤️ por voluntarios (<a href="https://www.linkedin.com/in/fabri-moles/">Fabricio Moles</a>, <a href="https://www.linkedin.com/in/f%C3%A9lix-franco-rojas-a23557108/">Félix Franco</a> y <a href="https://www.linkedin.com/in/jimenezortegaraul/">Raúl Jiménez</a>) en poco tiempo partiendo de la plantilla <a href="https://startbootstrap.com/theme/freelancer">Freelancer</a> de Bootstrap.</small>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- Copyright Section-->
-    <div class="copyright py-4 text-center text-white">
-        <div class="container"><small>Copyright © Your Website 2020</small></div>
+
+
+<!-- Portfolio Modal 1-->
+<div class="portfolio-modal modal fade" id="contestBasis" tabindex="-1" role="dialog" aria-labelledby="contestBasisLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true"><i class="fas fa-times"></i></span>
+            </button>
+            <div class="modal-body text-center">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <!-- Portfolio Modal - Title-->
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="contestBasisLabel">Bases del concurso</h2>
+                            <!-- Icon Divider-->
+                            <div class="divider-custom">
+                                <div class="divider-custom-line"></div>
+                                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                <div class="divider-custom-line"></div>
+                            </div>
+                            <!-- Portfolio Modal - Text-->
+                            <p class="mb-5">
+                                <div class="text-left">
+                                    <h2><strong>Participantes:</strong></h2>
+                                    <p>El concurso está abierto a jugadores/as jóvenes y adultos/as, de cualquier nivel de formación. El juego está expresado en español.</p>
+                                    <h2><strong>Inscripción y fechas a recordar</strong>:</h2>
+                                    <p>Inscripción: <strong> <em> La inscripción es gratuita </em>.</strong></p>
+                                    <p>El plazo de inscripción estará abierto hasta el día <em> 7 de abril. </em></p>
+                                    <p>Para jugar y concursar, los jugadores/as deben acceder a la <strong>hoja de inscripción (<a href="https://docs.google.com/spreadsheets/d/133QV_QVrhE5lCBv8H13miwkHr5R5sPxCXyy_C4TaOAI/edit?usp=sharing">aquí</a>),</strong> seleccionar el día y hora de juego que prefieren, e inscribirse en la sesión de juego correspondiente.</p>
+                                    <p>Las sesiones <strong>se juegan de forma cooperativa en una reunión on-line y cada grupo obtiene una única puntuación conjunta</strong> con la que compite con la obtenida por los grupos de jugadores/as de otras sesiones. <strong>Cada sesión de juego admite un máximo de 8 jugadores/as</strong></p>
+                                    <p><strong>Las sesiones de juego se celebrarán en formato on-line en distintos tramos horarios de los días 8 y 9 de abril de 2021</strong>. <strong>Los participantes inscritos recibirán una invitación a la sesión on-line</strong> en la que se desarrollará el juego en grupo.</p>
+                                    <p>La<strong> resolución de los enigmas</strong> del juego y los ganadores del concurso <strong>se harán públicos el día 10 de abril, </strong>una vez finalizadas todas las sesiones de juego.</p>
+                                    <h2><strong>Premios:</strong></h2>
+                                    <p>Los grupos ganadores recibirán como premio un conjunto de obsequios vinculados a la Geografía:</p>
+                                    <ul>
+                                       <li>Libros y Atlas de Geo-Planeta: libros relacionados con viajes, descubrimientos, rutas y otras temáticas geográficas, y atlas de enfoque singular.</li>
+                                       <li>Libros de Lunwerg&ndash;Planeta relacionados con propuestas de gamificación de contenidos geográfico (Escape-Maps)</li>
+                                       <li>Suscripción gratuita durante un año a los juegos educativos y cuadernos descargables de Didactalia Más.</li>
+                                       <li>Obsequio de la librería especializada en temática geográfica Mapas y Compañía.</li>
+                                    </ul>
+                                 </div>
+                            </p>
+                            <button class="btn btn-primary" data-dismiss="modal">
+                                <i class="fas fa-times fa-fw"></i>
+                                Cerrar bases
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+</div>
+
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed">
         <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
