Changing fonts and contest image

--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
     <!-- Masthead-->
     <header class="masthead bg-primary text-white text-center" id="hero">
         <div class="container d-flex align-items-center flex-column">
-            <!-- Masthead Avatar Image-->
-            <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="" />
             <!-- Masthead Heading-->
             <h1 class="masthead-heading text-uppercase mb1">La noche de la geografía</h1>
             <h2>9 Abril 2021</h2>
@@ -109,7 +107,7 @@
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="https://picsum.photos/480/270">
+                    <img src="assets/imgs/videoconference.jpeg">
                 </div>
             </div>
             <p>
