Adding UMA desc

--- a/index.html
+++ b/index.html
@@ -231,7 +231,11 @@
                             <div class="sponsor-grid__description">
                                 <h4>Universidad de Málaga</h4>
                                 <p>
-                                    Descripción pendiente
+                                    La <a href="https://www.uma.es/#gsc.tab=0">Universidad de Málaga</a> o, según sus siglas, UMA, es una universidad pública
+                                    fundada en 1972. En ella estudian cerca de 40 000 alumnos y trabajan cerca de 2450
+                                     profesores. Oferta 63 titulaciones de grado y 120 de posgrado, entre programas de
+                                     doctorado, másteres y titulaciones propias. Las enseñanzas se imparten en 19 centros
+                                     por profesores adscritos a 81 departamentos.
                                 </p>
                                 <div class="iframe">
                                     <iframe width="320" height="180" src="https://www.youtube.com/embed/xwlg1FEtRO4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
