--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <small>Página creada con ❤️ por voluntarios (<a href="https://www.linkedin.com/in/fabri-moles/">Fabricio Moles</a>, <a href="https://www.linkedin.com/in/f%C3%A9lix-franco-rojas-a23557108/">Félix Franco</a> y <a href="https://www.linkedin.com/in/jimenezortegaraul/">Raúl Jiménez</a>) en poco tiempo partiendo de la plantilla <a href="https://startbootstrap.com/theme/freelancer">Freelancer</a> de Bootstrap.</small>
+                    <small>Página creada con ❤️ y la ayuda de voluntarios (<a href="https://www.linkedin.com/in/fabri-moles/">Fabricio Moles</a> y <a href="https://www.linkedin.com/in/f%C3%A9lix-franco-rojas-a23557108/">Félix Franco</a>) partiendo de la plantilla <a href="https://startbootstrap.com/theme/freelancer">Freelancer</a> de Bootstrap.</small>
                 </div>
             </div>
         </div>
