--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/assets/imgs/favicon.ico">
     <title>GeoNight, la noche de la geografía</title>
-    <!-- COMMON TAGS -->
-    <meta charset="utf-8">
-    <title>GeoNight, la noche de la geaografía</title>
     <!-- Search Engine -->
-    <meta name="description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
-    <meta name="image" content="imagen para el sitio">
+    <meta name="description" content="¿Quieres disfrutar con diferentes pruebas y concurso y demostrar cuanto sabes de geografía?">
+    <meta name="image" content="/assets/imgs/imagen meta.jpeg">
+
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="GeoNight, la noche de la geaografía">
+    <meta itemprop="name" content="GeoNight, la noche de la geografía">
     <meta itemprop="description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
-    <meta itemprop="image" content="imagen para el sitio">
+    <meta itemprop="image" content="/assets/imgs/imagen meta.jpeg">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary with large image">
     <meta name="twitter:title" content="GeoNight, la noche de la geaografía">
@@ -23,11 +22,16 @@
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="GeoNight, la noche de la geaografía">
     <meta name="og:description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
-    <meta name="og:image" content="Aquí la imagen que quieras que acompañe a la url al compartirla">
-    <meta name="og:url" content="url del sitio que se está compartiendo">
-    <meta name="og:site_name" content="Geonight">
+    <meta name="og:image" content="/assets/imgs/imagen meta.jpeg">
+    <meta name="og:url" content="https://geonight.age-geografia.es/">
+    <meta name="og:site_name" content="GeoNight">
     <meta name="og:type" content="website">
+    <meta name= "author" content="Fabricio Moles: fabrimolescobedo@gmail.com"></meta>
+    <meta name= "author" content="Raúl Jimenez: Moles: hhkaos@gmail.com"></meta>
+    <meta name= "author" content="Félix Franco: felix.franco.rojas@gmail.com"></meta>
 
+
+    fabrimolescobedo@gmail.com
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
