--- a/index.html
+++ b/index.html
@@ -433,12 +433,19 @@
                             <div class="sponsor-grid__description">
                                 <h4>Esri España</h4>
                                 <p>
-                                    <a href="https://www.esri.es/">Esri España</a> es una empresa tecnológica,
-                                    innovadora, orientada al desarrollo de soluciones y
-                                    servicios en el marco de los Sistemas de Información Geográfica (SIG).
-                                    Incorpora tecnología de última generación y nos formamos con el fin de lograr la
-                                    mejor solución a los problemas e interrogantes de nuestros clientes para abordar
-                                    numerosos mercados verticales.
+                                    Esri, líder del mercado mundial de software de Sistemas de Información Geográfica
+                                    (GIS, por sus siglas en inglés), location intelligence y cartografía, ayuda a sus
+                                    clientes a desarrollar todo el potencial de los datos para mejorar los resultados
+                                    operativos y empresariales. Fundada en 1969 en Redlands, California (EE.UU.), el
+                                    software de Esri está presente en más de 350.000 organizaciones de todo el mundo y
+                                    en más de 200.000 instituciones de América, Asia y el Pacífico, Europa, África y
+                                    Oriente Medio, entre las que se encuentran empresas de la lista Fortune 500,
+                                    organismos gubernamentales, organizaciones sin ánimo de lucro y universidades.
+                                    Esri cuenta con oficinas regionales, distribuidores internacionales y socios que
+                                    prestan asistencia local en más de 100 países de los seis continentes. Con su
+                                    compromiso pionero con la tecnología de la información geoespacial, Esri diseña las
+                                    soluciones más innovadoras para la transformación digital, el Internet de las cosas
+                                    (IoT) y la analítica avanzada. Visítanos en <a href="https://www.esri.es/">esri.es</a>
                                 </p>
                                 <div class="iframe">
                                     <iframe width="320" height="180" src="https://www.youtube.com/embed/XCunGvo-ljk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -584,15 +591,6 @@
             img: 'assets/imgs/didactalia.gif'
         },
         {
-            title: 'APPangea',
-            description: 'Aprende Geografía e Historia desde tu móvil o table respondiento a preguntas y compitiendo más personas',
-            url: 'https://appangea.com/',
-            author: 'Desconocido / Docentes',
-            language: 'Español',
-            type: 'Móvil (Android & iOS)',
-            img: 'assets/imgs/appangea.png'
-        },
-        {
             title: 'GeoSapiens Web',
             description: 'Pon a prueba tus conocimientos sobre geografía, física, política y paisaje',
             url: 'https://educativo.ign.es/geosapiens/htm/es/index.html',
@@ -637,6 +635,15 @@
             language: 'Español',
             type: 'Web',
             img: 'assets/imgs/mapas-antiguos-ign.gif'
+        },
+        {
+            title: 'APPangea',
+            description: 'Aprende Geografía e Historia desde tu móvil o table respondiento a preguntas y compitiendo más personas',
+            url: 'https://appangea.com/',
+            author: 'Desconocido / Docentes',
+            language: 'Español',
+            type: 'Móvil (Android & iOS)',
+            img: 'assets/imgs/appangea.png'
         },
         {
             title: 'Un juego de geodésicas',
