Unido con última versión

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta name="og:site_name" content="GeoNight">
     <meta name="og:type" content="website">
     <meta name= "author" content="Fabricio Moles: fabrimolescobedo@gmail.com"></meta>
-    <meta name= "author" content="Raúl Jimenez: Moles: hhkaos@gmail.com"></meta>
+    <meta name= "author" content="Raúl Jiménez: hhkaos@gmail.com"></meta>
     <meta name= "author" content="Félix Franco: felix.franco.rojas@gmail.com"></meta>
 
 
